@@ -43,3 +43,5 @@
 	'common/lwrp_server.h'.
 2014-06-30 Fred Gleason <fredg@paravelsystems.com>
 	* Implemented the 'IP' command in 'common/lwrp_server.cpp'.
+2014-06-30 Fred Gleason <fredg@paravelsystems.com>
+	* Added an init script in 'syd/rc.syd.in'.
